# OpenWeatherMap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  openweathermap.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  continuous_integration.yml  flake8-analysis.yml  pytest-analysis.yml  python-app.yml
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pocar/: OneCallApi.html  OneCallApiAlerts.html  OneCallApiCurrent.html  OneCallApiDaily.html  OneCallApiHourly.html  OneCallApiMinutely.html
docs/_sources/: index.rst.txt
docs/_sources/source/: modules.rst.txt  pocar.rst.txt  readme_link.rst.txt
docs/_sources/source/code_examples/: code_example_onecallapi.md.txt  code_example_onecallapicurrent.md.txt  code_example_onecallapidaily.md.txt  code_example_onecallapihourly.md.txt  code_example_onecallapiminutely.md.txt  index.rst.txt
docs/_static/: documentation_options.js
docs/_static/css/: page_width_style.css
docs/source/: modules.html  pocar.html  readme_link.html
docs/source/code_examples/: code_example_onecallapi.html  code_example_onecallapialerts.html  code_example_onecallapicurrent.html  code_example_onecallapidaily.html  code_example_onecallapihourly.html  code_example_onecallapiminutely.html  index.html
docsrc/: Makefile  conf.py  index.rst
docsrc/source/: readme_link.rst
docsrc/source/code_examples/: code_example_onecallapi.md  code_example_onecallapialerts.md  code_example_onecallapiminutely.md
docsrc/source/pocar_modules/: index.rst  module_onecallapi.rst  module_onecallapiAlerts.rst  module_onecallapiCurrent.rst  module_onecallapiDaily.rst  module_onecallapiHourly.rst  module_onecallapiMinutely.rst
pocar/: OneCallApi.py  OneCallApiAlerts.py  OneCallApiCurrent.py  OneCallApiDaily.py  OneCallApiHourly.py  OneCallApiMinutely.py  __init__.py
pocar.wiki/: Home.md  Process-One-Call-Api-response-for-Current-data.md
tests/: test_classOneCallAPi.py  test_classOneCallAPiAlerts.py  test_classOneCallAPiCurrent.py  test_classOneCallAPiDaily.py  test_classOneCallAPiHourly.py  test_classOneCallAPiMinutely.py
