[tool.poetry]
name          = "pocar"
version       = "0.1.0"
description   = "Process Open Weather data provided by One Call API response"
license       = "MIT"
authors       = ["Tiago Santos <tiagosarmentosantos@gmail.com>"]
maintainers   = ["Tiago Santos <tiagosarmentosantos@gmail.com>"]
readme        = "README.rst"
homepage      = "https://github.com/tiagosarmento/pocar"
repository    = "https://github.com/tiagosarmento/pocar"
documentation = "https://github.com/tiagosarmento/pocar"
keywords      = [
                "openweather",
                "onecallapi",
                "python"
                ]
classifiers   = [
                "License :: OSI Approved :: MIT License",
                "Programming Language :: Python",
                "Programming Language :: Python :: 3.9",
                "Natural Language :: English",
                "Operating System :: OS Independent",
                "Development Status :: 1 - Planning",
                "Intended Audience :: Developers",
                "Topic :: Software Development :: Libraries",
                ]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.8"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
